Stable holding place before adding log in functionality

--- a/public/tmpls/board.html
+++ b/public/tmpls/board.html
@@ -12,6 +12,9 @@
   <button class="btn btn-default" ng-click="vm.resetBoard()">
     Reset!
   </button>
-  <label>And the weiner is...{{ gameWinner }}</label>
+<!--   <button class="btn btn-default" ng-click="">
+    Save
+  </button> -->
+  <label>And the weiner is...{{ vm.gameWinner }}</label>
   <p></p>
 </div>
