Added updates from 10/7 class

--- a/public/tmpls/board.html
+++ b/public/tmpls/board.html
@@ -15,6 +15,6 @@
 <!--   <button class="btn btn-default" ng-click="">
     Save
   </button> -->
-  <label>And the weiner is...{{ vm.gameWinner }}</label>
+  <label>And the winner is...{{ vm.gameWinner }}</label>
   <p></p>
 </div>
