--- a/public/tmpls/board.html
+++ b/public/tmpls/board.html
@@ -1,3 +1,14 @@
+<!-- public/tmpl/board.html -->
+<!--
+  <table class="table table-condensed table-striped">
+    <tr ng-repeat="ticTacRow in vm.theBoard track by $index">
+      <td ng-repeat="column in ticTacRow track by $index">
+        {{ (column == ' ' ? '&nbsp;' : column) }}
+      </td>
+    </tr>
+  </table>
+  <button class="btn btn-default" ng-click="vm.makeYourMove()">Move</button>
+-->
 <div class="container">
   <table class="table table-hover table-striped table-bordered">
     <tr ng-init="rowInd=$index" ng-repeat="tableRow in vm.theBoard track by $index">
